-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 21, 22, 23
-
Component/s: hotspot
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8331327 | 22.0.2 | Aleksey Shipilev | P4 | Resolved | Fixed | b05 |
| JDK-8333942 | 21.0.5-oracle | Tobias Hartmann | P4 | Resolved | Fixed | b01 |
| JDK-8331328 | 21.0.4 | Aleksey Shipilev | P4 | Resolved | Fixed | b01 |
As [~dlong] said, this is a regression of
JDK 22 and latest 23 produces strange message:
java -XX:CICompilerCount=1 -XX:-TieredCompilation X:+PrintCompilation -Xbatch -Xmx128m TestNestedLocks
154 1 b java.util.ArrayList::add (25 bytes)
159 2 b java.util.ArrayList::add (23 bytes)
162 3 !b TestNestedLocks::test (102 bytes)
162 3 !b TestNestedLocks::test (102 bytes) COMPILE SKIPPED: ??????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????
182 4 % !b TestNestedLocks::main @ 18 (39 bytes)
184 5 !b TestNestedLocks::main (39 bytes)
637 4 % ! TestNestedLocks::main @ 18 (39 bytes) made not entrant
OOM caught in test
It looks like something was broken recently with bailout messages.
- backported by
-
JDK-8331327 C2: bailout message broken: ResourceArea allocated string used after free
-
- Resolved
-
-
JDK-8331328 C2: bailout message broken: ResourceArea allocated string used after free
-
- Resolved
-
-
JDK-8333942 C2: bailout message broken: ResourceArea allocated string used after free
-
- Resolved
-
- duplicates
-
JDK-8327537 C2: missing output in PrintCompilation for failed compilation
-
- Closed
-
- relates to
-
JDK-8303951 Add asserts before record_method_not_compilable where possible
-
- Resolved
-
-
JDK-8132354 C1 and C2 should use the same bailout mechanism
-
- Open
-
-
JDK-8324743 C2 can't compile method with nested locks
-
- Open
-
- links to
-
Commit
openjdk/jdk21u-dev/cbd30c95
-
Commit
openjdk/jdk22u/f08201cd
-
Commit
openjdk/jdk/c5895558
-
Review
openjdk/jdk21u-dev/522
-
Review
openjdk/jdk22u/165
-
Review
openjdk/jdk/17710